# looplace

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  yek.yaml
.cargo/: audit.toml
.github/: FUNDING.yml
.github/workflows/: audit.yml  build-desktop.yml  deploy-pages.yml.disabled  release-desktop.yml
api/: Cargo.toml
desktop/: Cargo.toml  README.md
desktop/assets/: main.css
desktop/macos/: Info.plist
desktop/src/: main.rs
desktop/tests/: embedded_css.rs  theme_selectors.rs
looplace-libre/: Cargo.toml
looplace-libre-keys/: Cargo.toml
looplace-libre-keys/src/: lib.rs
looplace-libre/examples/: connect_smoke.rs  dump.rs  selfcheck.rs
looplace-libre/src/: crypto.rs  device.rs  error.rs  lib.rs  records.rs  session.rs  transport.rs
looplace-libre/tools/: generate_kat.py  generate_parse_kat.py
looplace-store/: Cargo.toml
looplace-store/examples/: ingest.rs
looplace-store/src/: convert.rs  error.rs  lib.rs  migrate.rs  observation.rs  parquet_store.rs  session.rs  store.rs
mobile/: Cargo.toml  README.md
mobile/assets/: main.css
mobile/src/: main.rs
scripts/: release.sh  validate_bundle_local.sh
scripts/macos/: bundle.sh
ui/: Cargo.toml  i18n.toml
ui/assets/styling/: navbar.css
ui/assets/theme/: main.css
ui/i18n/en-US/: looplace-ui.ftl  looplace_ui.ftl
ui/i18n/es-ES/: looplace-ui.ftl  looplace_ui.ftl
ui/i18n/fr-FR/: looplace-ui.ftl  looplace_ui.ftl
ui/src/: i18n.rs  lib.rs  navbar.rs
ui/src/components/: app_navbar.rs
ui/src/core/: format.rs  glucose.rs  mod.rs  platform.rs  qc.rs  readiness.rs  storage.rs  timing.rs
ui/src/results/: charts.rs  detail.rs  export.rs  fonts.rs  list.rs  mod.rs  utils.rs
ui/src/tasks/: mod.rs
ui/src/tasks/nback/: engine.rs  metrics.rs  mod.rs  view.rs
ui/src/tasks/pvt/: engine.rs  metrics.rs  mod.rs  view.rs
ui/src/tests/: i18n_completeness.rs
ui/src/views/: glucose.rs  home.rs  mod.rs  nback.rs  pvt.rs  results.rs
ui/tests/: i18n_missing_keys.rs
web/: Cargo.toml  README.md
web/assets/: main.css
web/src/: main.rs
