[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "api",
]

[workspace.package]
authors = ["ReadyPlayerEmma <emma@readyplayeremma.com>"]
license = "MPL-2.0"
repository = "https://github.com/ReadyPlayerEmma/looplace"

[workspace.dependencies]
dioxus = { version = "0.6.3" }

# workspace
ui = { path = "ui", package = "looplace-ui" }
api = { path = "api", package = "looplace-api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
