[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "api",
    "looplace-libre",
    "looplace-libre-keys",
    "looplace-store",
]

[workspace.package]
authors = ["ReadyPlayerEmma <emma@readyplayeremma.com>"]
license = "MPL-2.0"
repository = "https://github.com/ReadyPlayerEmma/looplace"

[workspace.dependencies]
dioxus = { version = "0.6.3" }

# workspace
ui = { path = "ui", package = "looplace-ui" }
api = { path = "api", package = "looplace-api" }
looplace-libre = { path = "looplace-libre", package = "looplace-libre" }
looplace-libre-keys = { path = "looplace-libre-keys", package = "looplace-libre-keys" }
looplace-store = { path = "looplace-store", package = "looplace-store" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
