[package]
name = "looplace-desktop"
version = "0.2.0"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
# Native local health + cognition store (Parquet backend). Desktop-only.
looplace-store = { workspace = true, features = ["parquet-store"] }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
server = ["dioxus/server"]
