[package]
name = "looplace-mobile"
version = "0.1.7"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }

[features]
default = []
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
