[package]
name = "looplace-ui"
version = "0.1.6"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ui"

[dependencies]
dioxus = { workspace = true }
api = { workspace = true }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "js"] }
time = { version = "0.3", features = ["formatting", "macros", "wasm-bindgen", "parsing"] }
futures-util = "0.3"
futures-channel = "0.3"
futures = "0.3"
base64 = "0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.2", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Performance",
    "Storage",
    "Document",
    "Navigator",
    "VisibilityState",
    "EventTarget",
    "Event",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlImageElement",
    "HtmlTextAreaElement",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time", "rt"] }
directories = "5"
png = "0.17"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }
