[package]
name = "looplace-ui"
version = "0.1.8"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "ui"

[dependencies]
dioxus = { workspace = true }
api = { workspace = true }
rand = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "js"] }
time = { version = "0.3", features = ["formatting", "macros", "wasm-bindgen", "parsing"] }
futures-util = "0.3"
futures-channel = "0.3"
futures = "0.3"
base64 = "0.21"
once_cell = "1.19"

# i18n & localization
i18n-embed = { version = "0.16.0", default-features = false, features = ["fluent-system", "rust-embed"] }
i18n-embed-fl = "0.10.0"
fluent = "0.17.0"
unic-langid = "0.9.6"
rust-embed = "8.7.2"

fontdue = { version = "0.8", optional = true }

[features]
default = []
embed_inter = ["fontdue"]


[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.2", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

# i18n (wasm requester & force embedding in debug)
i18n-embed = { version = "0.16.0", default-features = false, features = ["fluent-system", "rust-embed", "web-sys-requester"] }
rust-embed = { version = "8.7.2", features = ["debug-embed"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Performance",
    "Storage",
    "Document",
    "Navigator",
    "VisibilityState",
    "EventTarget",
    "Event",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlImageElement",
    "HtmlTextAreaElement",
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["time", "rt"] }
directories = "5"
png = "0.17"
arboard = "3"
usvg = { version = "0.43", default-features = false, features = ["text"] }
resvg = "0.43"
tiny-skia = "0.11"
fontdb = "0.15"

# i18n (desktop requester)
i18n-embed = { version = "0.16.0", default-features = false, features = ["fluent-system", "rust-embed", "desktop-requester"] }
