[package]
name = "looplace-web"
version = "0.1.8"
edition = "2021"
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]
